# tiny-uie

./: .gitignore  LICENSE  Makefile  README.md  config.yaml  pyproject.toml
.claude/: settings.json
.claude/commands/: issue.md
.claude/hooks/: python-hooks.py
data/: dev.jsonl  train.jsonl
data/schema/: relations.json  types.json
src/tiny_uie/: __init__.py  dataset.py  infer.py  infer_rel.py  postprocess.py  train_rel.py  train_span.py  train_type.py
src/tiny_uie/models/: relation.py  uie.py
src/tiny_uie/utils/: __init__.py  rel_pairs.py
tests/: __init__.py  test_tiny_uie.py
tools/: make_dummy_data.py
